<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.menkalian</groupId>
    <artifactId>logprocessor</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <source>1.8</source>
                            <target>1.8</target>
                            <compilerArgs>-proc:none</compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jdk11-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <release>11</release>
                            <compilerArgs>
                                <arg>-proc:none</arg>
                                <arg>--add-exports</arg>
                                <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg>
                                <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg>
                                <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg>
                                <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            </compilerArgs>
                            <multiReleaseOutput>true</multiReleaseOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>